feat: integrate WeatherApiCache and refactor WeatherApiServiceImpl tests