@@ -1,7 +1,8 @@
 package com.weatherviewer.service.impl;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.weatherviewer.client.WeatherApiClient;
+import com.weatherviewer.exception.ExternalHttpCallException;
+import com.weatherviewer.service.integration.WeatherApiCache;
 import com.weatherviewer.dto.GeoLocationDto;
 import com.weatherviewer.dto.LocationDto;
 import com.weatherviewer.dto.WeatherDto;
@@ -16,7 +17,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -24,7 +25,7 @@ import java.util.stream.StreamSupport;
 @Slf4j
 public class WeatherApiServiceImpl implements WeatherApiService {
 
-    private final WeatherApiClient weatherApiClient;
+    private final WeatherApiCache weatherApiCache;
     private final WeatherAggregatorHelper weatherAggregatorHelper;
     private final WeatherApiMapper weatherApiMapper;
     private final LocationMapper locationMapper;
@@ -46,15 +47,17 @@ public class WeatherApiServiceImpl implements WeatherApiService {
     @Override
     public WeatherDto getWeatherByCity(String city) {
         log.info("Fetching current weather for city: {}", city);
-        JsonNode jsonNode = weatherApiClient.fetchCurrentWeatherByCity(city);
-        return weatherApiMapper.toWeatherDto(jsonNode);
+        return fetchWeather(() -> weatherApiCache.fetchCurrentWeatherByCity(city));
+    }
+
+    private WeatherDto fetchWeather(Supplier<JsonNode> fetcher) {
+        return weatherApiMapper.toWeatherDto(fetcher.get());
     }
 
     @Override
     public WeatherDto getWeatherByCoordinates(double latitude, double longitude) {
         log.info("Fetching current weather for latitude={}, longitude={}", latitude, longitude);
-        JsonNode jsonNode = weatherApiClient.fetchCurrentWeatherByCoordinates(latitude, longitude);
-        return weatherApiMapper.toWeatherDto(jsonNode);
+        return fetchWeather(() -> weatherApiCache.fetchCurrentWeatherByCoordinates(latitude, longitude));
     }
 
     @Override
@@ -74,28 +77,37 @@ public class WeatherApiServiceImpl implements WeatherApiService {
     @Override
     public List<WeatherDto> getHourlyForecastByCity(String city) {
         log.info("Fetching hourly forecast for city: {}", city);
-        JsonNode jsonNode = weatherApiClient.fetchForecastByCity(city).withArray("list");
-        return mapJsonNodeToList(jsonNode, weatherApiMapper::toWeatherDto);
+        return fetchForecastList(() -> weatherApiCache.fetchForecastByCity(city));
     }
 
-    @Override
-    public List<WeatherDto> getHourlyForecastByCoordinates(double latitude, double longitude) {
-        log.info("Fetching hourly forecast for latitude={}, longitude={}", latitude, longitude);
-        JsonNode jsonNode = weatherApiClient.fetchForecastByCoordinates(latitude, longitude).withArray("list");
-        return mapJsonNodeToList(jsonNode, weatherApiMapper::toWeatherDto);
-    }
-
-    @Override
-    public List<GeoLocationDto> getCitiesByName(String city) {
-        log.info("Fetching geo data for city: {}", city);
-        JsonNode jsonNode = weatherApiClient.fetchGeocodingByCity(city);
-        return mapJsonNodeToList(jsonNode, weatherApiMapper::toGeoLocationDto);
+    private List<WeatherDto> fetchForecastList(Supplier<JsonNode> fetcher) {
+        JsonNode listNode = fetcher.get().path("list");
+        if (listNode.isMissingNode() || !listNode.isArray()) {
+            throw new ExternalHttpCallException("Missing 'list' field in forecast response");
+        }
+        return mapJsonNodeToList(listNode, weatherApiMapper::toWeatherDto);
     }
 
     private <T> List<T> mapJsonNodeToList(JsonNode arrayNode, Function<JsonNode, T> mapper) {
         return StreamSupport.stream(arrayNode.spliterator(), false)
                 .map(mapper)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public List<WeatherDto> getHourlyForecastByCoordinates(double latitude, double longitude) {
+        log.info("Fetching hourly forecast for latitude={}, longitude={}", latitude, longitude);
+        return fetchForecastList(() -> weatherApiCache.fetchForecastByCoordinates(latitude, longitude));
+    }
+
+    @Override
+    public List<GeoLocationDto> getCitiesByName(String city) {
+        log.info("Fetching geo data for city: {}", city);
+        JsonNode jsonNode = weatherApiCache.fetchGeocodingByCity(city);
+        if (!jsonNode.isArray()) {
+            throw new ExternalHttpCallException("Unexpected geocoding response format");
+        }
+        return mapJsonNodeToList(jsonNode, weatherApiMapper::toGeoLocationDto);
     }
 
 }
